added user model and devise config options

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,10 @@
         <li><%= link_to "Login", root_path %></li>
     </ul>
 
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
 
-    <%= yield %>
+  <%= yield %>
 
   </div>
 
