--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -39,9 +39,11 @@
 
     <%= file_field_tag :file %>
 
-    <%= submit_tag "Upload Companies" %>
+    <%= submit_tag "Upload Companies", class: 'btn btn-default' %>
 
 <% end %>
 
+<h3>Download File</h3>
+<%= link_to "Report", companies_path(format: "csv"), class: 'btn btn-default' %>
 
 <%= link_to 'New Company', new_company_path %>
