--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -14,7 +14,10 @@
 
       <div class="form-group">
         <%= f.label :date, class: 'input-label' %><br>
-        <%= f.date_select :date %>
+
+          <%= f.date_select :date %>
+
+
       </div>
       <div class="form-group">
         <%= f.label :company %><br>
@@ -28,8 +31,17 @@
         <%= f.label :salesperson %><br>
         <%= f.text_field :salesperson, class: 'form-control' %>
       </div>
-      <div class="actions">
-        <%= f.submit %>
+
+      <div class="form-group">
+        <%= f.label "Status" %>
+        <div>
+          <%= f.select(:status_type, options_for_select([['PAID', 'PAID'], ['PENDING', 'PENDING']]), { include_blank: true }) %>
+        </div>
+
+      </div>
+
+      <div class="form-group">
+        <%= f.submit 'Submit', class: 'btn btn-default' %>
       </div>
   <% end %>
 </div>
