--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,13 +16,24 @@
         <li><%= link_to "Features", welcome_features_path %></li>
         <li><%= link_to "FAQs", welcome_faq_path %></li>
         <li><%= link_to "Pricing", welcome_pricing_path %></li>
-        <li><%= link_to "Invoices", invoices_path %></li>
+
         <% if current_user %>
            <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
         <% else %>
            <li><%= link_to "Sign Up", new_user_registration_path %></li>
            <li><%= link_to "Sign In", new_user_session_path %></li>
         <% end %>
+       <div class="btn-group pull-right right-nav">
+         <button type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown">
+           <span class="caret"></span>
+           Admin
+         </button>
+         <ul class="dropdown-menu" role="menu">
+           <li><%= link_to "Invoices", invoices_path %></li>
+           <li><%= link_to "Employees", employees_path %></li>
+           <li><%= link_to "Companies", companies_path %></li>
+         </ul>
+       </div>
            </ul>
 
     <% if flash[:notice] %>
